adding e4 migration